# dccp

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CITATION.cff  ML_cov_est.py  README.md  __init__.py  autoencoder.py  binary_equation.py  circle_packing.py  convexify_constr.py  convexify_obj.py  dccp_constraint.py  dccp_linearize.py  dccp_objective.py  dccp_problem.py  debug_result.py  filter_design.py  main.py  path_avoi_control.py  phase_retrieval.py  pyproject.toml  setup.py  sparse_eigen.py  sparse_recovery.py  sparse_recovery2.py  sparse_recovery_plot.py  test.py  trajectory_control_obstacle.py
.github/: dependabot.yaml
.github/workflows/: docs.yaml  linting.yaml  release.yaml  tests.yaml
dccp/: __init__.py  constraint.py  convexify_constr.py  convexify_obj.py  dccp_problem.py  linearize.py  objective.py  problem.py
dccp/tests/: base_test.py  test_example.py
docs/src/: __init__.py  api.md  citing.md  conf.py  index.md  install.md  settings.md  user-guide.md
docs/src/_static/css/: styling.css
docs/src/examples/: boolean_least_squares.ipynb  circle_packing.ipynb  control_collision_avoidance.ipynb  index.md  path_planning.ipynb
examples/: ML_cov_est.py  autoencoder.py  binary_equation.py  boolean_least_squares.ipynb  circle_packing.ipynb  circle_packing.py  control_collision_avoidance.ipynb  filter_design.ipynb  filter_design.py  gaussian_covariance_matrix.ipynb  path_avoi_control.py  path_planning.ipynb  phase_retrieval.ipynb  phase_retrieval.py  ruff.toml  setup.py  sparse_eigen.py  sparse_recovery.ipynb  sparse_recovery.py  sparse_recovery2.py  sparse_recovery_plot.py  sparse_singular.py  sparse_singular_vectors.ipynb  test.py  trajectory_control_obstacle.py
examples/sparse_rec/: data1.npy  data10.npy  data100_l1.npy  data11_l1.npy  data12.npy  data12_l1.npy  data13.npy  data13_l1.npy  data14.npy  data14_l1.npy  data15_l1.npy  data16.npy  data16_l1.npy  data17.npy  data17_l1.npy  data18_l1.npy  data19.npy  data19_l1.npy  data20.npy  data20_l1.npy  data21.npy  data21_l1.npy  data22.npy  data22_l1.npy  data23.npy  data23_l1.npy  data24.npy  data24_l1.npy  data25.npy  data25_l1.npy  data26_l1.npy  data27.npy  data27_l1.npy  data28.npy  data28_l1.npy  data29.npy  data29_l1.npy  data2_l1.npy  data3.npy  data30.npy  (+131 more)
src/: __init__.py
src/dccp/: __init__.py  constraint.py  initialization.py  linearize.py  objective.py  problem.py  problem.py.old  utils.py
tests/: base_test.py  conftest.py  ruff.toml  test_constraint.py  test_example.py  test_initialization.py  test_linearize.py  test_objective.py  test_problem.py  test_utils.py  utils.py
