[project]
name = "dccp"
version = "1.0.5"
description = "Disciplined Convex-Concave Programming"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["cvxpy>=1.7.1", "ecos>=2.0.14", "matplotlib>=3.10.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dccp"]
